add request page

--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
     <link rel="stylesheet" href="dist/css/styles.css">
-    <title>iKapitalist - Привлечь инвестирование на компанию</title>
+    <title>iKapitalist - Привлечь инвестирование</title>
 </head>
 
 <body>
@@ -361,11 +361,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="000000000000">
                                                                             <span class="field__text">Введите БИН компании</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Adidas">
                                                                             <span class="field__text">Название компании</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="form-select lk-tabs__select">
@@ -375,11 +377,13 @@
                                                                             <option value="">Промышленность</option>
                                                                         </select>
                                                                         <span class="form-select__text">Выберите отрасль компании</span>
+                                                                        <span class="form-select__error-text">Error text</span>
                                                                     </div>
                                                                     <div class="field lk-tabs__field">
                                                                         <input type="text" name="company-date" class="field__input field__input_date"
                                                                             placeholder="мм/гггг">
                                                                         <span class="field__text">Когда вы начали Ваш бизнес</span>
+                                                                        <span class="field__error-text">Error text</span>
                                                                     </div>
                                                                     <div class="checkbox lk-tabs__checkbox">
                                                                         <div class="checkbox__box">
@@ -396,11 +400,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="00000000000">
                                                                             <span class="field__text">ИИН Директора</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Иванов">
                                                                             <span class="field__text">Фамилия</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="lk-tabs__fields">
@@ -408,11 +414,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="Иван">
                                                                             <span class="field__text">Имя</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Иванович">
                                                                             <span class="field__text">Отчество</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="lk-tabs__fields">
@@ -423,17 +431,20 @@
                                                                                 <option value="">Директор</option>
                                                                             </select>
                                                                             <span class="form-select__text">Должность</span>
+                                                                            <span class="form-select__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="+7 (777) 777 77 77">
                                                                             <span class="field__text">Телефон</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="field lk-tabs__field">
                                                                         <input type="text" name="company-name" class="field__input"
                                                                             placeholder="Ivanov@mail.com">
                                                                         <span class="field__text">Email</span>
+                                                                        <span class="field__error-text">Error text</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
@@ -704,11 +715,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="000000000000">
                                                                             <span class="field__text">Введите БИН компании</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Adidas">
                                                                             <span class="field__text">Название компании</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="form-select lk-tabs__select">
@@ -718,11 +731,13 @@
                                                                             <option value="">Промышленность</option>
                                                                         </select>
                                                                         <span class="form-select__text">Выберите отрасль компании</span>
+                                                                        <span class="form-select__error-text">Error text</span>
                                                                     </div>
                                                                     <div class="field lk-tabs__field">
                                                                         <input type="text" name="company-date" class="field__input field__input_date"
                                                                             placeholder="мм/гггг">
                                                                         <span class="field__text">Когда вы начали Ваш бизнес</span>
+                                                                        <span class="field__error-text">Error text</span>
                                                                     </div>
                                                                     <div class="checkbox lk-tabs__checkbox">
                                                                         <div class="checkbox__box">
@@ -739,11 +754,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="00000000000">
                                                                             <span class="field__text">ИИН Директора</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Иванов">
                                                                             <span class="field__text">Фамилия</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="lk-tabs__fields">
@@ -751,11 +768,13 @@
                                                                             <input type="text" name="company-bin" class="field__input"
                                                                                 placeholder="Иван">
                                                                             <span class="field__text">Имя</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="Иванович">
                                                                             <span class="field__text">Отчество</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="lk-tabs__fields">
@@ -766,17 +785,20 @@
                                                                                 <option value="">Директор</option>
                                                                             </select>
                                                                             <span class="form-select__text">Должность</span>
+                                                                            <span class="form-select__error-text">Error text</span>
                                                                         </div>
                                                                         <div class="field lk-tabs__fields-item">
                                                                             <input type="text" name="company-name" class="field__input"
                                                                                 placeholder="+7 (777) 777 77 77">
                                                                             <span class="field__text">Телефон</span>
+                                                                            <span class="field__error-text">Error text</span>
                                                                         </div>
                                                                     </div>
                                                                     <div class="field lk-tabs__field">
                                                                         <input type="text" name="company-name" class="field__input"
                                                                             placeholder="Ivanov@mail.com">
                                                                         <span class="field__text">Email</span>
+                                                                        <span class="field__error-text">Error text</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="lk-tabs__group">
