--- a/lk-spisok-sdelok.html
+++ b/lk-spisok-sdelok.html
@@ -162,14 +162,14 @@
                                         <th class="table__companies">Компании</th>
                                         <th class="table__prices">Инвестиции</th>
                                         <th>Тип Сделки</th>
-                                        <th class="table__statuses">Статус</th>
+                                        <th class="statuses">Статус</th>
                                         <th class="table__keep-down">Keep down</th>
                                     </tr>
                                     <tr>
                                         <td>
                                             <div class="table__company">
                                                 <img src="dist/images/companies/starbucks.png" alt="" class="table__company-img">
-                                                <a class="table__link" href="#">Starbucks</a>
+                                                <a class="table__link" href="./lk-vladelec-zayavka.html">Starbucks</a>
                                             </div>
                                         </td>
                                         <td>
@@ -179,7 +179,7 @@
                                             <span class="table__type">Займ</span>
                                         </td>
                                         <td>
-                                            <span class="table__status">Выплачено</span>
+                                            <span class="status">Выплачено</span>
                                         </td>
                                         <td>
                                             <span class="table__keep">47:59:59</span>
@@ -189,7 +189,7 @@
                                         <td>
                                             <div class="table__company">
                                                 <img src="dist/images/companies/nike.png" alt="" class="table__company-img">
-                                                <a class="table__link" href="#">Nike</a>
+                                                <a class="table__link" href="./lk-vladelec-zayavka.html">Nike</a>
                                             </div>
                                         </td>
                                         <td>
@@ -199,7 +199,7 @@
                                             <span class="table__type">Займ</span>
                                         </td>
                                         <td>
-                                            <span class="table__status table__status_warning">На подписании</span>
+                                            <span class="status status_warning">На подписании</span>
                                         </td>
                                         <td>
                                             <span class="table__keep">47:59:59</span>
@@ -209,7 +209,7 @@
                                         <td>
                                             <div class="table__company">
                                                 <img src="dist/images/companies/apple.png" alt="" class="table__company-img">
-                                                <a class="table__link" href="#">Apple</a>
+                                                <a class="table__link" href="./lk-vladelec-zayavka.html">Apple</a>
                                             </div>
                                         </td>
                                         <td>
@@ -219,7 +219,7 @@
                                             <span class="table__type">Займ</span>
                                         </td>
                                         <td>
-                                            <span class="table__status table__status_warning">Сбор средств</span>
+                                            <span class="status status_warning">Сбор средств</span>
                                         </td>
                                         <td>
                                             <span class="table__keep table__keep_success">Завершен</span>
@@ -229,7 +229,7 @@
                                         <td>
                                             <div class="table__company">
                                                 <img src="dist/images/companies/tesla.png" alt="" class="table__company-img">
-                                                <a class="table__link" href="#">Tesla</a>
+                                                <a class="table__link" href="./lk-vladelec-zayavka.html">Tesla</a>
                                             </div>
                                         </td>
                                         <td>
@@ -239,7 +239,7 @@
                                             <span class="table__type">Займ</span>
                                         </td>
                                         <td>
-                                            <span class="table__status table__status_warning">Ожидает подтверждения</span>
+                                            <span class="status status_warning">Ожидает подтверждения</span>
                                         </td>
                                         <td>
                                             <span class="table__keep table__keep_success">Завершен</span>
@@ -249,7 +249,7 @@
                                         <td>
                                             <div class="table__company">
                                                 <img src="dist/images/companies/samsung.png" alt="" class="table__company-img">
-                                                <a class="table__link" href="#">Samsung</a>
+                                                <a class="table__link" href="./lk-vladelec-zayavka.html">Samsung</a>
                                             </div>
                                         </td>
                                         <td>
@@ -259,7 +259,7 @@
                                             <span class="table__type">Займ</span>
                                         </td>
                                         <td>
-                                            <span class="table__status table__status_warning">Ожидает подтверждения</span>
+                                            <span class="status status_warning">Ожидает подтверждения</span>
                                         </td>
                                         <td>
                                             <span class="table__keep table__keep_success">Завершен</span>
@@ -275,11 +275,11 @@
                                     <button class="tab-btn deals-list__tab-btn">Вторичный рынок <span class="not-view deals-list__tab-btn-count">1</span></button>
                                 </div>
                                 <div class="filter-menu deals-list__filters">
-                                    <div class="switcher filter-menu__switch">
-                                        <div class="switcher__text">Активные сделки</div>
-                                        <div class="switcher__main">
-                                            <input type="checkbox" name="active-deals" class="switcher__field" id="active-deals">
-                                            <label for="active-deals" class="switcher__label"></label>
+                                    <div class="switch filter-menu__switch">
+                                        <div class="switch__text">Активные сделки</div>
+                                        <div class="switch__main">
+                                            <input type="checkbox" name="active-deals" class="switch__field" id="active-deals">
+                                            <label for="active-deals" class="switch__label"></label>
                                         </div>
                                     </div>
                                     <div class="filter-menu__btns">
